
* Fixed all isses due to missing or NA data.

* Made the package extensible.

* Fixed Issues #288, #261, #283.

* Added 2 new plugins Proj4Leaflet (PR #294) and EasyButton (PR #295).

* Upgraded existing plugins to their respective latest versions and added missing/new functionality from those plugins. (PR #293)

* Added Graticule plugin (PR #293)

* Upgrade leaflet.js to 0.7.7.1 (PR #359)

* Color palette functions now support viridis palettes ("viridis", "magma", "inferno", and "plasma").

leaflet 1.0.2
--------------------------------------------------------------------------------

* When used with `leafletProxy`, `fitBounds` did not return its input object as
  output, so magrittr chains would break after `fitBounds` was called.

* Add addMeasure()/removeMeasure() functions to allow users to measure lines and
  areas, via the leaflet-measure plugin by @ljagis. (PR #171. Thanks, Kenton
  Russell!)

* Add `input${mapid}_center` Shiny event.

* Add support for labels on most layers, that show either statically or on
  hover. (PR #181. Thanks Bhaskar Karambelkar!)

* Add support for markers with configurable colors and icons, via the
  Leaflet.awesome-markers plugin by @lvoogdt. See `?addAwesomeMarkers`.
  (PR #184. Great work, Bhaskar!)

* Add support for the Leaflet.Terminator plugin by @joergdietrich. Overlays
  day and night regions on a map. See `?addTerminator`. (PR #184, thanks
  Bhaskar!)

* Add support for Leaflet.SimpleGraticule plugin by @ablakey. See
  `?addSimpleGraticule`. (PR #184, thanks again Bhaskar!)

* Add support for Leaflet.MagnifyingGlass plugin by @bbecquet. Adds a
  configurable magnifying glass that displays the area under the cursor at an
  increased zoom level. See `?addMagnifyingGlass`. (PR #184, still Bhaskar!)

* Add support for Leaflet-MiniMap plugin by @Norkart. Adds a mini map to the
  corner that can be used to see or change the bounds of the main map. See
  `?addMiniMap`. (PR #184, Bhaskar again!)
